<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sectionItemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/grid_padding_left_right"
    android:paddingRight="@dimen/grid_padding_left_right"
    android:paddingTop="@dimen/grid_padding_top"
    android:paddingBottom="@dimen/grid_padding_bottom"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">
    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        />
    <TextView
        style="@style/normalStyle"
        android:layout_marginTop="10dp"
        android:id="@+id/tvTitle"
        android:lines="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivProductImage"
        android:text="---"
         />

    <TextView
        style="@style/ProductItem.PriceStyle"
        android:layout_marginTop="5dp"
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:text="---"
         />
</androidx.constraintlayout.widget.ConstraintLayout>